--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-The AT command has been deprecated. Please use schtasks.exe instead.
-
-The request is not supported.
+PORT=
+NODE_ENV=development
+JWT_SECRET=
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_PORT=
